--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
                         <li class="ss-carousel__item videoBlock">
                           <video muted="" autoplay="" loop="">
                             <source
-                              src="/projects/amyra/Amrya Video.mp4"
+                              src="/projects/amyra/Amrya Video 1.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
@@ -727,19 +727,13 @@
                         </li>
 
                         <li class="ss-carousel__item textBlock">
-                          <!-- <h3>Site</h3> -->
+                          <!-- <h3></h3> -->
                           <p>
-                            Layered semicircular forms create depth, movement,
-                            and a dynamic appearance. Subtle shadows and
-                            dimensionality give the structure a sense of motion,
-                            softening its modern aesthetic with gentle,
+                            The Facade layered semicircular forms create depth,
+                            movement, and a dynamic appearance. Subtle shadows
+                            and dimensionality give the structure a sense of
+                            motion, softening its modern aesthetic with gentle,
                             repetitive curves.
-                          </p>
-                          <p>
-                            Step into a world of fluid elegance, where every
-                            thoughtfully crafted curve creates harmony, inviting
-                            exploration in a space that’s both sophisticated and
-                            inspiring.
                           </p>
                         </li>
                         <li class="ss-carousel__item imgBlock">
@@ -751,15 +745,20 @@
                         </li>
                         <li class="ss-carousel__item textBlock">
                           <div class="ss-carousel__description">
-                            <h3>Concept</h3>
+                            <p>
+                              Step into a world of fluid elegance, where every
+                              thoughtfully crafted curve creates harmony,
+                              inviting exploration in a space that’s both
+                              sophisticated and inspiring.
+                            </p>
                             <p>
                               Introducing a new era of fluidic interiors at
-                              @amyrasilver. Nestled in a serene, modern space,
-                              the store exudes fluid elegance and refined
-                              sophistication. Soft, flowing curves, neutral
-                              tones, and smooth textures enhance fine jewellery
-                              displays, offering a serene, gallery-like
-                              experience.
+                              amyra silver jewellery. Nestled in a serene,
+                              modern space, the store exudes fluid elegance and
+                              refined sophistication. Soft, flowing curves,
+                              neutral tones, and smooth textures enhance fine
+                              jewellery displays, offering a serene,
+                              gallery-like experience.
                             </p>
                           </div>
                         </li>
@@ -779,18 +778,12 @@
                         <li class="ss-carousel__item textBlock">
                           <!-- <h3>Site</h3> -->
                           <p>
-                            Situated on a corner with dual exposure and flyover
-                            visibility, the store features a PVC pipe façade
-                            with cove lighting that mirrors its interior curves.
-                            Integrated video walls amplify the brand’s presence
-                            and visibility.
-                          </p>
-                          <p>
-                            The design balances aesthetics with functionality,
-                            keeping customer flow around a circular display and
-                            strategically placing key areas around it. Hidden
-                            storage and green corner oases maximize space while
-                            enhancing comfort and elegance.
+                            The site Situated on a corner with dual exposure and
+                            flyover visibility, The design balances aesthetics
+                            with functionality, keeping customer flow around a
+                            circular display and strategically placing key areas
+                            around it. Hidden storage and green corner oases
+                            maximize space while enhancing comfort and elegance.
                           </p>
                         </li>
 
@@ -810,13 +803,6 @@
                               area, breaking away from linear norms. Sculptural,
                               jewellery-inspired elements and elliptical racks
                               evoke fluidity and reflect the brand’s identity.
-                            </p>
-                            <p>
-                              The design balances aesthetics with functionality,
-                              keeping customer flow around a circular display
-                              and strategically placing key areas around it.
-                              Hidden storage and green corner oases maximize
-                              space while enhancing comfort and elegance.
                             </p>
                           </div>
                         </li>
@@ -854,7 +840,7 @@
                           </div>
                         </li>
 
-                        <li class="ss-carousel__item videoBlock">
+                        <li class="ss-carousel__item videoBlock overlyText">
                           <video muted autoplay loop>
                             <source
                               src="/projects/amyra/Amyra - Display counter.mp4"
@@ -864,9 +850,6 @@
 
                             Your browser does not support the video tag.
                           </video>
-                        </li>
-                        <li class="ss-carousel__item textBlock">
-                          <!-- <h3>Display counters</h3> -->
                           <p>
                             The display counters are geometrized to replicate
                             the geometry of diamonds, featuring layered surfaces
@@ -874,7 +857,7 @@
                           </p>
                         </li>
 
-                        <li class="ss-carousel__item videoBlock">
+                        <li class="ss-carousel__item videoBlock overlyText">
                           <video muted autoplay loop>
                             <source
                               src="/projects/amyra/Amyra - Cash counter.mp4"
@@ -884,9 +867,6 @@
 
                             Your browser does not support the video tag.
                           </video>
-                        </li>
-                        <li class="ss-carousel__item textBlock">
-                          <!-- <h3>The cash counter</h3> -->
                           <p>
                             The cash counter incorporates soft curves that blend
                             organically with the interior's language, creating
@@ -897,13 +877,20 @@
                         <li class="ss-carousel__item videoBlock">
                           <video muted="" autoplay="" loop="">
                             <source
-                              src="/projects/amyra/Amrya Full Video.mp4"
+                              src="/projects/amyra/Amrya Full Video new.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
 
                             Your browser does not support the video tag.
                           </video>
+                        </li>
+                        <li class="ss-carousel__item imgBlock">
+                          <img
+                            class="ss-carousel__item__image"
+                            src="/projects/amyra/9.png"
+                            alt=""
+                          />
                         </li>
 
                         <li class="ss-carousel__item imgBlock">
@@ -936,14 +923,6 @@
                             functionality.
                           </p>
                         </li> -->
-
-                        <li class="ss-carousel__item imgBlock">
-                          <img
-                            class="ss-carousel__item__image"
-                            src="/projects/amyra/9.png"
-                            alt=""
-                          />
-                        </li>
 
                         <!-- <li class="ss-carousel__item slideBlock">
                           <div class="swiper mySwiper">
@@ -987,8 +966,8 @@
                         </li> -->
 
                         <li class="ss-carousel__item mapBlock">
-                          <!-- <div id="map"></div> -->
-                          <iframe
+                          <div id="map" class="map-container"></div>
+                          <!-- <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3825.417072362901!2d80.65936527491395!3d16.50502878423935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a35fb2cb9168e3d%3A0x15335ac5718bc32d!2sAmyra%20Silver!5e0!3m2!1sen!2sin!4v1745307043961!5m2!1sen!2sin&gestureHandling=none"
                             width="600"
                             height="450"
@@ -996,7 +975,7 @@
                             allowfullscreen=""
                             loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"
-                          ></iframe>
+                          ></iframe> -->
                         </li>
 
                         <li class="ss-carousel__item teamBlock threeGrid">
@@ -2658,6 +2637,25 @@
         background-position: center;
         background-repeat: no-repeat;
       }
+      .ss-carousel .ss-carousel__item.videoBlock {
+        position: relative;
+      }
+      .ss-carousel .ss-carousel__item.videoBlock.overlyText {
+        min-width: 60vw;
+      }
+      .ss-carousel .ss-carousel__item.videoBlock.overlyText video {
+        max-height: 88%;
+      }
+      .overlyText p {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        text-align: center;
+        max-width: 65%;
+        margin-left: auto;
+        margin-right: auto;
+      }
       .ss-carousel .ss-carousel__item.videoBlock video {
         width: 100%;
         height: auto;
@@ -3074,6 +3072,12 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
 
           document
             .querySelectorAll(".ss-carousel .ss-carousel__item")
+            .forEach(
+              (el) => (el.style.height = window.innerHeight - 140 + "px")
+            );
+
+          document
+            .querySelectorAll(".map-container")
             .forEach(
               (el) => (el.style.height = window.innerHeight - 140 + "px")
             );
