--- a/about.html
+++ b/about.html
@@ -206,6 +206,10 @@
       .grid2 section {
         width: 50%;
       }
+      video {
+        width: 50%;
+        height: auto;
+      }
 
       @media all and (max-width: 576px) {
         #menu {
@@ -278,24 +282,6 @@
         <div class="container scroll-container">
           <div class="content grid2">
             <section>
-              <h2>Our Philosophy</h2>
-              <blockquote class="philosophy">
-                <span>Stories matter.</span> <span>We are all stories.</span>
-                <span>Parts matter.</span>
-                <span>We are an indispensable part.</span>
-                <span>We tell stories that comfort, enrich, enhance.</span>
-                <span>We sell stories that are untouched and so touching.</span>
-                <span>We are a new-age storytelling agile ensemble.</span>
-                <span>We are a next-gen narrative mélange.</span>
-                <span>We are all built from the stories we tell and sell.</span>
-                <span>We are a thirsty crew.</span>
-                <span
-                  >We harvest stories that shape the better world you desire and
-                  dream of.</span
-                >
-              </blockquote>
-            </section>
-            <section>
               <h2>Our Mission</h2>
               <p>
                 Our architectural division specializes in designing functional
@@ -319,6 +305,33 @@
                 partnering with you on your next project. Choose us for
                 unparalleled creativity and visionary design solutions.
               </p>
+            </section>
+            <section>
+              <!-- <h2>Our Philosophy</h2> -->
+              <video muted="" autoplay="" loop="">
+                <source
+                  src="/images/Story Matter.mp4"
+                  type="video/mp4"
+                  poster="/images/blank.png"
+                />
+
+                Your browser does not support the video tag.
+              </video>
+              <!-- <blockquote class="philosophy">
+                <span>Stories matter.</span> <span>We are all stories.</span>
+                <span>Parts matter.</span>
+                <span>We are an indispensable part.</span>
+                <span>We tell stories that comfort, enrich, enhance.</span>
+                <span>We sell stories that are untouched and so touching.</span>
+                <span>We are a new-age storytelling agile ensemble.</span>
+                <span>We are a next-gen narrative mélange.</span>
+                <span>We are all built from the stories we tell and sell.</span>
+                <span>We are a thirsty crew.</span>
+                <span
+                  >We harvest stories that shape the better world you desire and
+                  dream of.</span
+                >
+              </blockquote> -->
             </section>
           </div>
           <!-- Content-->
