--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/amyra/Amyra - Cash counter.mp4"
+                              src="/projects/amyra/Amyra - Cash Counter.mp4"
                               type="video/mp4"
                             />
 
@@ -590,7 +590,7 @@
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/amyra/Amyra - Wall racks.mp4"
+                              src="/projects/amyra/Amyra - Wall Racks.mp4"
                               type="video/mp4"
                             />
 
@@ -810,7 +810,7 @@
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/amyra/Amyra - Wall racks.mp4"
+                              src="/projects/amyra/Amyra - Wall Racks.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
@@ -843,7 +843,7 @@
                         <li class="ss-carousel__item videoBlock overlyText">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/amyra/Amyra - Display counter.mp4"
+                              src="/projects/amyra/Amyra - Display Counter.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
@@ -860,7 +860,7 @@
                         <li class="ss-carousel__item videoBlock overlyText">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/amyra/Amyra - Cash counter.mp4"
+                              src="/projects/amyra/Amyra - Cash Counter.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
